# worker_vs_gpt

./: .cookiecutter.json  .env.example  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  poetry.toml  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
data/analyse-tal/: augmented.json  test.json
data/crowdflower/: balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/empathy#empathy_bin/: balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/hate-speech/: DATASTATEMENT.md  README.md  augmented.json  balanced_gpt-3.5-turbo_augmented.json  balanced_gpt-4_augmented.json  base.json  proportional_gpt-3.5-turbo_augmented.json  proportional_gpt-4_augmented.json  test.json  train.json
data/hayati_politeness/: balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/hypo-l/: balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/questionintimacy/: balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/same-side-pairs/: balanced_gpt-4_augmented.json  balanced_gpt-4_augmented_save.json  balanced_llama-2-70b_augmented.json  base.json  test.json  train.json
data/sentiment/: balanced_gpt-3.5-turbo_augmented.json  balanced_gpt-4_augmented.json  balanced_llama-2-70b_augmented.json  base.json  proportial_gpt-4_augmented.json  proportional_gpt-3.5-turbo_augmented.json  proportional_gpt-4_augmented.json  proportional_gpt-4_augmented_v2.json  test.json
data/similarity_results/: e5-base_crowdsourced_normal_preds.json  e5-base_crowdsourced_setfit_preds.json  hate-speech_balanced_gpt-3.5-turbo_augmented_similarity.json  hate-speech_balanced_gpt-4_augmented_similarity.json  (+19 more)
docs/: conf.py  index.md  reference.md  usage.md
scripts/: convert_vicuna.sh  datasize_experiment.sh  llama.sh  normal_experiment.sh  poetry_install.sh  prompt_augmentation.sh  prompt_augmentation_hf.sh  prompt_classification.sh  trainer_experiment.sh  trainer_setfit.sh
tests/: __init__.py  test_main.py  test_similarity.py  test_utils.py
(+687 files in other folders)
