[tool.poetry]
name = "worker_vs_gpt"
version = "0.0.0"
description = "Worker vs. GPT"
authors = ["Anders Giovanni Møller <agmo@itu.dk>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Development Status :: 1 - Planning",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = ">=8.0.1"
torch = "^2.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
datasets = "^2.10.1"
wandb = "^0.14.0"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.2"
openai = "^0.27.2"
backoff = "^2.2.1"
python-dotenv = "^1.0.0"
hydra-core = "^1.3.2"
peft = "^0.2.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
urllib3 = "1.26.6"
evaluate = "^0.4.0"
langchain = "^0.0.285"
text-generation = "^0.6.0"
huggingface-hub = "^0.17.1"
transformers = "^4.33.2"
[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
worker_vs_gpt = "worker_vs_gpt.__main__:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
spacy = "^3.7.1"
rouge = "^1.0.1"
sacrebleu = "^2.3.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["worker_vs_gpt", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true